src/test/deca/context/invalid/added/double_field.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A {
  int x;
  int x;
}

{
}
